--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <p>Hello, World!</p>
+    <h1>Practice makes perfect</h1>
     <h2>About This Page</h2>
     <p>This is the first paragraph. It introduces the page and its purpose.</p>
     <p>This is the second paragraph. It provides a little more context and background.</p>
