--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -28,6 +28,7 @@
 
     <!-- Link to tweets.html -->
     <p><a href="tweets.html">Check out my Tweets!</a></p>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   
 </body>
 </html>
