--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,34 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Base Index</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Untitled Document</title>
 </head>
+
 <body>
-  <header>
-    <h1>Welcome to My Basic Page</h1>
-  </header>
-
-  
-    <h2>About This Page</h2>
-    <p>This is the first paragraph. It introduces the page and its purpose.</p>
-    <p>This is the second paragraph. It provides a little more context and background.</p>
-
-    <h3>More Details</h3>
-    <p>This is the third paragraph. It expands on details mentioned above.</p>
-    <p>This is the fourth paragraph. It gives an example or a concluding sentence.</p>
-
-    <!-- Clickable image: clicking the image opens the target URL in a new tab -->
-    <p>
-      <a href="https://www.alxafrica.org" target="_blank" rel="noopener noreferrer">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="max-width:300px;height:auto;">
-      </a>
+  <blockquote class="twitter-tweet" lang="en">
+    <p lang="en" dir="ltr">Can you answer this? Tem como calcular a diagonal no Canvas? <a href="http://t.co/E8dD01jGKX">http://t.co/E8dD01jGKX</a>  <a href="https://twitter.com/hashtag/javascript?src=hash">#javascript</a>
     </p>
-
-    <!-- Link to tweets.html -->
-    <p><a href="tweets.html">Check out my Tweets!</a></p>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  
+    &mdash; SO em Português (@StackOverflowPT) <a href="https://twitter.com/StackOverflowPT/status/613791039539806208">June 24, 2015</a>
+  </blockquote>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <!--                 ^                -->
 </body>
+
 </html>
