--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,19 +1,49 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Untitled Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Base Index</title>
 </head>
-
 <body>
-  <blockquote class="twitter-tweet" lang="en">
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+
+    <article>
+      <h1>Welcome to My Basic Page</h1>
+      <h2>About This Page</h2>
+      <p>This is the first paragraph. It introduces the page and its purpose.</p>
+      <p>This is the second paragraph. It provides a little more context and background.</p>
+
+      <h3>More Details</h3>
+      <p>This is the third paragraph. It expands on details mentioned above.</p>
+      <p>This is the fourth paragraph. It gives an example or a concluding sentence.</p>
+
+      <!-- Clickable image: clicking the image opens the target URL in a new tab -->
+      <p>
+        <a href="https://www.alxafrica.org" target="_blank" rel="noopener noreferrer">
+          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="max-width:300px;height:auto;">
+        </a>
+      </p>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+
+    <blockquote class="twitter-tweet" lang="en">
     <p lang="en" dir="ltr">Can you answer this? Tem como calcular a diagonal no Canvas? <a href="http://t.co/E8dD01jGKX">http://t.co/E8dD01jGKX</a>  <a href="https://twitter.com/hashtag/javascript?src=hash">#javascript</a>
     </p>
     &mdash; SO em Português (@StackOverflowPT) <a href="https://twitter.com/StackOverflowPT/status/613791039539806208">June 24, 2015</a>
   </blockquote>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  <!--                 ^                -->
-</body>
 
+  <footer>
+    <p>Made by Oscar Otty - <a href="https://github.com/oscar-otty" target="_blank">here</a>.</p>
+  </footer>
+</body>
 </html>
