--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <title>Base Index</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Base Index</title>
 </head>
 <body>
-    <p>Hello, World!</p>
-    <h1>Practice makes perfect</h1>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-    <h2>About This Page</h2>
+  <main>
+    <article>
+      <h1>Welcome to My Basic Page</h1>
+      <h2>About This Page</h2>
+      <p>This is the first paragraph. It introduces the page and its purpose.</p>
+      <p>This is the second paragraph. It provides a little more context and background.</p>
 
-    <p>This is the first paragraph. It introduces the page and its purpose.</p>
-    <p>This is the second paragraph. It provides a little more context and background.</p>
-    
-    <h3>More Details</h3>
-    <p>This is the third paragraph. It expands on details mentioned above.</p>
-    <p>This is the fourth paragraph. It gives an example or a concluding sentence.</p>
+      <h3>More Details</h3>
+      <p>This is the third paragraph. It expands on details mentioned above.</p>
+      <p>This is the fourth paragraph. It gives an example or a concluding sentence.</p>
 
-    <p>
-    <a href="https://www.alxafrica.org" target="_blank" rel="noopener noreferrer">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="max-width:300px;height:auto;">
-    </a>
-    </p>
-  
+      <!-- Clickable image: clicking the image opens the target URL in a new tab -->
+      <p>
+        <a href="https://www.alxafrica.org" target="_blank" rel="noopener noreferrer">
+          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="max-width:300px;height:auto;">
+        </a>
+      </p>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Oscar Otty - <a href="https://github.com/oscar-otty" target="_blank">here</a>.</p>
+  </footer>
 </body>
 </html>
-
