--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -13,6 +13,7 @@
     </ul>
   </header>
 
+  <main>
     <article>
       <h1>Welcome to My Basic Page</h1>
       <h2>About This Page</h2>
@@ -31,10 +32,6 @@
       </p>
     </article>
 
-    <aside>
-      <p>placeholder to add comment thread later</p>
-    </aside>
-
     <blockquote class="twitter-tweet" lang="en">
     <p lang="en" dir="ltr">Can you answer this? Tem como calcular a diagonal no Canvas? <a href="http://t.co/E8dD01jGKX">http://t.co/E8dD01jGKX</a>  <a href="https://twitter.com/hashtag/javascript?src=hash">#javascript</a>
     </p>
@@ -42,8 +39,19 @@
   </blockquote>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
   <footer>
     <p>Made by Oscar Otty - <a href="https://github.com/oscar-otty" target="_blank">here</a>.</p>
   </footer>
 </body>
 </html>
+
+
+
+
+
