--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -30,14 +30,13 @@
           <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="max-width:300px;height:auto;">
         </a>
       </p>
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">This is an example embedded tweet for testing purposes.</p>
+        <a href="https://twitter.com/Twitter/status/1456342957026048981">September 21, 2025</a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      
     </article>
-
-    <blockquote class="twitter-tweet" lang="en">
-    <p lang="en" dir="ltr">Can you answer this? Tem como calcular a diagonal no Canvas? <a href="http://t.co/E8dD01jGKX">http://t.co/E8dD01jGKX</a>  <a href="https://twitter.com/hashtag/javascript?src=hash">#javascript</a>
-    </p>
-    &mdash; SO em Português (@StackOverflowPT) <a href="https://twitter.com/StackOverflowPT/status/613791039539806208">June 24, 2015</a>
-  </blockquote>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
     <aside>
